force-app/main/default/objects/Investor__c/Investor__c.object-meta.xml
<CustomObject>
    <description>Investor portfolio-summary record for the DPEG Investor Relations app. Aggregates an individual's onboarding, tier, KYC status and lifetime portfolio metrics. Linked to a Contact and an assigned IR representative.</description>
    <label>Investor</label>
    <nameField>
        <displayFormat>INVR-{0000}</displayFormat>
        <label>Investor Name</label>
        <startingNumber>1</startingNumber>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Investors</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>