force-app/main/default/objects/Investor__c/fields/Active_Investor__c.field-meta.xml
<CustomField>
    <fullName>Active_Investor__c</fullName>
    <label>Active Investor</label>
    <description>Indicates the investor currently holds at least one active position.</description>
    <inlineHelpText>Checked when the investor has one or more active investments.</inlineHelpText>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>