force-app/main/default/objects/Investor__c/fields/Active_Positions__c.field-meta.xml
<CustomField>
    <fullName>Active_Positions__c</fullName>
    <label>Active Positions</label>
    <description>Count of active investment positions currently held by this investor.</description>
    <inlineHelpText>Number of investments with an active status held by this investor.</inlineHelpText>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
</CustomField>