force-app/main/default/objects/Investor__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <label>Contact</label>
    <description>The Contact this investor profile summarizes. Source of KYC and accreditation status.</description>
    <inlineHelpText>Select the Contact record that represents this investor individual.</inlineHelpText>
    <type>Lookup</type>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Investors</relationshipLabel>
    <relationshipName>Investors</relationshipName>
    <required>true</required>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>