force-app/main/default/objects/Investor__c/fields/Investing_Entities_Count__c.field-meta.xml
<CustomField>
    <fullName>Investing_Entities_Count__c</fullName>
    <label>Investing Entities Count</label>
    <description>Number of distinct investing entities (Accounts) this investor is associated with.</description>
    <inlineHelpText>Count of investing-entity Accounts linked to this investor.</inlineHelpText>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>