force-app/main/default/objects/Investor__c/fields/Investor_Tier__c.field-meta.xml
<CustomField>
    <fullName>Investor_Tier__c</fullName>
    <label>Investor Tier</label>
    <description>Relationship tier used by IR to segment investors for outreach and prioritization.</description>
    <inlineHelpText>Anchor = top relationship; Active = engaged; Dormant = no recent activity.</inlineHelpText>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Anchor</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Dormant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>