force-app/main/default/objects/Investor__c/fields/IR_Rep__c.field-meta.xml
<CustomField>
    <fullName>IR_Rep__c</fullName>
    <label>IR Rep</label>
    <description>Investor Relations representative assigned to manage this investor relationship.</description>
    <inlineHelpText>Select the internal IR user responsible for this investor.</inlineHelpText>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>IR Investors</relationshipLabel>
    <relationshipName>IR_Investors</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>