force-app/main/default/objects/Investor__c/fields/Last_Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Activity_Date__c</fullName>
    <label>Last Activity Date</label>
    <description>Date of the most recent financial or relationship activity for this investor.</description>
    <inlineHelpText>The date this investor last had recorded activity (contribution, distribution, or contact).</inlineHelpText>
    <type>Date</type>
</CustomField>