force-app/main/default/objects/Investor__c/fields/Lifetime_Invested__c.field-meta.xml
<CustomField>
    <fullName>Lifetime_Invested__c</fullName>
    <label>Lifetime Invested</label>
    <description>Total capital this investor has funded across all positions over time.</description>
    <inlineHelpText>Cumulative amount funded across all of this investor's positions, in USD.</inlineHelpText>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>