force-app/main/default/objects/Investor__c/fields/Onboarding_Date__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Date__c</fullName>
    <label>Onboarding Date</label>
    <description>Date the investor completed onboarding into the DPEG platform.</description>
    <inlineHelpText>The date this investor was onboarded. Defaults to today.</inlineHelpText>
    <type>Date</type>
    <defaultValue>TODAY()</defaultValue>
</CustomField>