force-app/main/default/objects/Investor__c/fields/Total_Commitments__c.field-meta.xml
<CustomField>
    <fullName>Total_Commitments__c</fullName>
    <label>Total Commitments</label>
    <description>Count of commitments associated with this investor.</description>
    <inlineHelpText>Number of commitments this investor has made across offerings.</inlineHelpText>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
</CustomField>