force-app/main/default/objects/Investor__c/listViews/By_Tier_Anchor.listView-meta.xml
<ListView>
    <fullName>By_Tier_Anchor</fullName>
    <label>Anchor Investors</label>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Investor_Tier__c</field>
        <operation>equals</operation>
        <value>Anchor</value>
    </filters>
    <columns>NAME</columns>
    <columns>Investor_Tier__c</columns>
    <columns>Lifetime_Invested__c</columns>
    <columns>KYC_Status__c</columns>
</ListView>