force-app/main/default/objects/Investor__c/listViews/Pending_Accreditation.listView-meta.xml
<ListView>
    <fullName>Pending_Accreditation</fullName>
    <label>Pending Accreditation</label>
    <filterScope>Everything</filterScope>
    <filters>
        <field>KYC_Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </filters>
    <columns>NAME</columns>
    <columns>KYC_Status__c</columns>
    <columns>IR_Rep__c</columns>
</ListView>